--- a/lbRobots/lbRobots.csproj
+++ b/lbRobots/lbRobots.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GoogleAuthenticator" Version="3.2.0" />
+    <PackageReference Include="Otp.NET" Version="1.3.0" />
     <PackageReference Include="Selenium.Support" Version="4.19.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
   </ItemGroup>
